@@ -7,4 +7,5 @@ web/ui/static/js/       usr/share/prometheus/web/static
 web/ui/static/vendor/bootstrap3-typeahead  usr/share/prometheus/web/static/vendor
 web/ui/static/vendor/fuzzy                 usr/share/prometheus/web/static/vendor
 web/ui/static/vendor/js                    usr/share/prometheus/web/static/vendor
+web/ui/static/vendor/moment                usr/share/prometheus/web/static/vendor
 web/ui/templates/       usr/share/prometheus/web/
